@@ -51,6 +51,10 @@ To access member font
 (default zero) in TTCs.
 .
 .TP
+.BI "\-d\ \(dq" "axis1\ axis2\ .\|.\|." \(dq
+Specify the design coordinates for each variation axis at start-up.
+.
+.TP
 .B \-v
 Show version.
 .
